[metadata]
name = pycmus
summary = A python cmus remote library
homepage = http://github.com/mtreinish/pycmus
description-file =
    README.rst
author = Matthew Treinish
author-email = mtreinish@kortar.org
classifier =
    License :: OSI Approved :: GNU General Public License v3 (GPLv3)
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.5
    Programming Language :: Python :: 3.6

[files]
packages =
    pycmus

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html
